# Skillbox_Final_tasks

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.github/workflow/: check.yml
.github/workflows/: check.yml
Basic_principles_of_OOP/Task_25_6/: family.py  test_family.py
Basic_principles_of_OOP/Task_5/: family_classes.py  family_main.py
Basic_principles_of_OOP/Task_6/: family.py  family_tests.py
Decorators - Advanced/Task_29_2/: task_29_2.py
Decorators - Advanced/Task_29_3/: task_29_3.py
Decorators - Advanced/Task_29_4/: task_29_4.py
Decorators - Advanced/Task_29_5/: task_29_5.py
Decorators - Advanced/task_29_1/: task_29_1.py
Decorators_basic_level/Task_27_1/: task_27_1.py
Decorators_basic_level/Task_27_2/: task_27_2.py
Decorators_basic_level/Task_27_3/: task_27_3.py
Decorators_basic_level/Task_27_4/: task_27_4.py
Decorators_basic_level/Task_27_5/: task_27_5.py
Deep_class_work_and_built-in_decorators/Task_28_1/: task_28_1.py
Deep_class_work_and_built-in_decorators/Task_28_2/: task_28_2.py
Deep_class_work_and_built-in_decorators/Task_28_3/: task_28_3.py
Deep_class_work_and_built-in_decorators/Task_28_4/: task_28_4.py
Functions - end/Task_30_1/: task_30_1.py
Functions - end/Task_30_2/: task_30_2.py
Functions - end/Task_30_3/: task_30_3.py
Functions - end/Task_30_4/: task_30_4.py
Iterators_and_Generators/Task_26_1/: number_squares.py  number_squares_classes.py
Iterators_and_Generators/Task_26_3/: file_paths.py
Iterators_and_Generators/Task_26_4/: main.py
Iterators_and_Generators/Task_26_5/: task.py
(+12 files in other folders)
