[tool.poetry]
name = "skillbox-final-tasks"
version = "1.2.2"
description = "Tasks on the Skillbox project"
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
