[tool.poetry]
name = "skillbox-final-tasks"
version = "1.2.2"
description = "Tasks on the Skillbox project"
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate="^1.4.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.6.0"
flake8-return = "^1.1.3"
pep8-naming = "^0.13.2"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.black]
include = '\.pyi?$'
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true

[tool.mypy]
no_implicit_optional = true
ignore_missing_imports = true
exclude = 'test_*'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
